💄 Alteração da nomenclatura para português
